envs/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/group.name: argocd
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2025-03-27T06:38:16Z"
  deletionGracePeriodSeconds: 0
  deletionTimestamp: "2025-03-27T07:56:07Z"
  finalizers:
  - group.ingress.k8s.aws/argocd
  generation: 4
  name: argocd-ingress
  namespace: argocd
  resourceVersion: "33394"
  uid: 3e6f791f-3bd9-4905-aba7-612ec4ab80d3
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: k8s-argocd-980b9a6f24-786229434.ap-northeast-2.elb.amazonaws.com
